# urx

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .iwyu-imp  CHANGELOG.md  CMakeLists.txt  External-HDF5.cmake  License.txt  MANIFEST.in  README.md  SECURITY.md  UffConfig.cmake.in  fdsq.sh  newtest.txt  pyproject.toml  requirements-3rd-party.txt  requirements-gitlab.txt  setup.cfg  setup.py  tox.ini  uff.h  uff_acquisition.cpp  uff_acquisition.h  uff_aperture.cpp  uff_aperture.h  uff_channel_data.cpp  uff_channel_data.h  uff_dataset.cpp  uff_dataset.h  uff_element.cpp  uff_element.h  uff_element_geometry.cpp  uff_element_geometry.h  uff_event.cpp  uff_event.h  uff_excitation.cpp  (+53 more)
Testing/: CMakeLists.txt  uffTestChannelData.cpp  uff_test_time_helper.cpp
Testing/hdf5/: CMakeLists.txt  readerTest.cpp
Testing/uff/: CMakeLists.txt  operator.cpp  test_build.cpp  test_coordinates.cpp  test_time_offset_base.cpp  test_transform.cpp  test_trigger_base.cpp  test_vector.cpp  test_version.cpp
Testing/utils/: CMakeLists.txt  group_data_reader.cpp  operator.cpp  reader.cpp  time_helper.cpp
matlab/: CMakeLists.txt  Uff_MatlabConfig.cmake.in  UrxMatlabConfig.cmake.in  vcpkg.json
matlab/+uff/: Acquisition.m  Event.m  Group.m  GroupData.m  GroupFactory.m  Object.m  StdVectorEvent.m  StdVectorGroup.m  Version.m  acqTest.m
matlab/+urx/: Acquisition.m  Dataset.m  Element.m  ElementGeometry.m  Event.m  Excitation.m  Group.m  GroupData.m  GroupDataReader.m  GroupDataStream.m  ImpulseResponse.m  LibBinding.m  Object.m  ObjectField.m  Probe.m  PtrType.m  RawData.m  RawDataLoadPolicy.m  RawData_double_complex.m  RawData_double_real.m  RawData_float_complex.m  RawData_float_real.m  RawData_int16_t_complex.m  RawData_int16_t_real.m  RawData_int32_t_complex.m  RawData_int32_t_real.m  ReceiveSetup.m  StdVector.m  StdVectorType.m  Stream.m  Transform.m  TransmitSetup.m  Vector3D.m  Version.m  Wave.m  acqTest.m  cloneDataset.m  loadFromFile.m  saveToFile.m  svTest.m  (+1 more)
matlab/CppGlue/: CMakeLists.txt  acquisition.cpp  acquisition.h
matlab/LibBinding/: CMakeLists.txt  UffLibBinding.cpp  UffLibBinding.h  UrxLibBinding.cpp  UrxLibBinding.h
matlab/Mex/: Macros.hpp  Vector.cpp  acquisition.cpp  dataset.cpp  group.cpp  group_data.cpp  load_lib.cpp  test.m  version.cpp
matlab/binding/: CMakeLists.txt  bindings.cpp  export_symbol_from_static.cpp  linux.prj.in  urx.prj.in  windows.prj.in
matlab/calllib/: group_data.cpp  publishInterface.m
matlab/cmake/: matlab_wrappers.cmake
matlab/mexplus/: arguments.h  dispatch.h  mexplus.h  mxarray.h  mxtypes.h
matlab/template/: Enum.m.in  MexStruct.m.in  Struct.m.in
matlab/vector_cpp/: clear_env.m  group_data.cpp  use_cmake_gen_mex.m
matlab/vector_hpp/: example.m  group_data.hpp
python/: CMakeLists.txt  README.md  bindings.cpp  bindings.h  bindings_library.cpp  bindings_module.cpp  bindings_module.h  bindings_module2.cpp  bindings_public.cpp  bindings_slow.cpp  bindings_vector_el_geo_imp_resp_exc_probe.cpp  bindings_vector_float.cpp  bindings_vector_group_ele_evt_group_data.cpp  bindings_vector_int16.cpp  bindings_vector_int32.cpp  bindings_vector_int64.cpp  bindings_vector_int8.cpp  bindings_vector_string_urx_vector.cpp
python/pyurx/: __init__.pyi  bindings.pyi
python/ultrasound_rawdata_exchange/: bindings.pyi
test/: CMakeLists.txt  readerTest.cpp  resources.cpp  resources.h
test/data/: rca.urx
test/hdf5/: readerTest.cpp
test/io/: CMakeLists.txt  reader_test.cpp  reader_v0_3.cpp  upgrade_test.cpp  writer_test.cpp
test/matlab/: runTestsCi.m  ubuntuGitlabCi.m  windowsGitlabCi.m
test/python/: CMakeLists.txt  dataset_gen.py  test_bindings.py  test_bindings_Acquisition.py  test_bindings_Dataset.py  test_bindings_DoubleNan.py  test_bindings_Element.py  test_bindings_ElementGeometry.py  test_bindings_Event.py  test_bindings_Excitation.py  test_bindings_Group.py  test_bindings_GroupData.py  test_bindings_ImpulseResponse.py  test_bindings_Probe.py  test_bindings_ReceiveSetup.py  test_bindings_StdVecOpaqueBinding.py  test_bindings_Transform.py  test_bindings_TransmitSetup.py  test_bindings_Utils.py  test_bindings_Vector.py  test_bindings_Version.py  test_bindings_Wave.py  test_bindings_acquisition.py  test_bindings_clone.py  test_bindings_dataset.py  test_bindings_double_nan.py  test_bindings_element.py  test_bindings_element_geometry.py  test_bindings_event.py  test_bindings_excitation.py  test_bindings_group.py  test_bindings_group_data.py  (+12 more)
uac/: CMakeLists.txt  UacConfig.cmake.in  acquisition.h  dataset.h  destination_link.h  enums.h  event.h  excitation.h  group.h  hw_config.h  igroup.h  receive_setup.h  super_group.h  transmit_setup.h  trigger.h  uac.h  version.h
uff/: CMakeLists.txt  External-HDF5.cmake  acquisition.h  aperture.cpp  aperture.h  channel_data.cpp  channel_data.h  coordinates.h  dataset.cpp  dataset.h  destination_link.h  element.cpp  element.h  element_geometry.cpp  element_geometry.h  event.cpp  event.h  event_data.h  excitation.cpp  excitation.h  group.h  group_data.h  group_link.h  igroup.h  impulse_response.cpp  impulse_response.h  linear_array.cpp  linear_array.h  log.h  matrix_array.cpp  matrix_array.h  object.cpp  object.h  perimeter.cpp  perimeter.h  point.h  position.cpp  position.h  probe.cpp  probe.h  (+77 more)
uff_utils/: CMakeLists.txt  UffUtilsConfig.cmake.in  Uff_UtilsConfig.cmake.in  group_data_reader.h  group_helper.cpp  group_helper.h  io.h  probe_helper.cpp  probe_helper.h  reader.cpp  reader.h  time_helper.h  writer.cpp  writer.h
urx/: CMakeLists.txt  UrxConfig.cmake.in  acquisition.h  config.h.in  dataset.h  element.h  element_geometry.h  enums.h  event.h  excitation.h  group.h  group_data.h  impulse_response.h  probe.h  receive_setup.h  transform.h  transmit_setup.h  urx.h  urx.h.in  vector.h  version.h  wave.h
urx_utils/: CMakeLists.txt  UrxUtilsConfig.cmake.in  common.cpp  common.h  group_data_reader.cpp  group_data_reader.h  group_helper.cpp  group_helper.h  io.h  probe_helper.cpp  probe_helper.h  reader.cpp  reader.h  writer.cpp  writer.h
(+359 files in other folders)
