[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel==0.45.1",
    "cmake-build-extension==0.6.1",
    "setuptools==75.3.0; python_version == '3.8'",
    "setuptools==75.6.0; python_version >= '3.9'",
    "toml==0.10.2",
    "cmake==3.31.1",
    #"## The following requirements were added by pip freeze:",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "ninja==1.11.1.2",
    "packaging==24.2",
    "setuptools-scm==8.1.0",
    "smmap==5.0.1",
]

[project]
name = "ultrasound-rawdata-exchange"
version = "1.0.1"
dependencies = [
    "cmake-build-extension==0.6.1",
    "numpy==1.24.4; python_version == '3.8'",
    "numpy==1.26.4; python_version == '3.9'",
    "numpy==2.1.3; python_version >= '3.10'",
    #"## For tests",
    "parameterized==0.9.0",
    #"## The following requirements were added by pip freeze:",
    "cmake==3.31.1",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "ninja==1.11.1.2",
    "packaging==24.2",
    "setuptools==75.3.0; python_version == '3.8'",
    "setuptools==75.6.0; python_version >= '3.9'",
    "setuptools-scm==8.1.0",
    "smmap==5.0.1",
]
description = "Ultrasound Raw data eXchange file format C++ implementation and wrapping in Python and Matlab"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
    ]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://moduleus.com"
Documentation = "https://github.com/moduleus/urx/wiki"
Repository = "https://github.com/moduleus/urx.git"
Issues = "https://github.com/moduleus/urx/issues"
Changelog = "https://github.com/moduleus/urx/wiki/changelog"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
extend-exclude = '\.pyi$'

[tool.cibuildwheel]
build-verbosity = 1
build-frontend = { name="pip", args=["--no-clean"] }

[tool.cibuildwheel.windows]
# "cp313-win_amd64" : Not officialy release.
build = ["cp38-win_amd64", "cp39-win_amd64", "cp310-win_amd64", "cp311-win_amd64", "cp312-win_amd64"]
# Should be build-system.requires but doesn't work.
before-build = "pip install cmake"
