[metadata]
name = pyurx
description = URX python binding
platforms = any
 
classifiers =
    Development Status :: 4 - Beta
    Operating System :: Unix
    Operating System :: Microsoft
    Programming Language :: C++
    Programming Language :: Python

[options]
zip_safe = False
python_requires = >=3.9